k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esme-tp-julesmlrd
  labels:
    app: esme-devops-app
    environment: production
    student: julesmlrd
